--- a/app/src/main/res/layout/activity_detalle_pelicula.xml
+++ b/app/src/main/res/layout/activity_detalle_pelicula.xml
@@ -6,12 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/black_background"
     tools:context=".DetallePelicula">
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iv_pelicula_imagen"
@@ -24,17 +25,40 @@
             android:id="@+id/tv_nombre_pelicula"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@color/yellow"
             android:text="BONES"
-            android:textSize="20sp"
-            android:gravity="center" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/tv_pelicula_desc"
             android:layout_width="match_parent"
+            android:textColor="@color/white"
             android:layout_height="wrap_content"
+            android:paddingHorizontal="20dp"
             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do"
-            android:textSize="20sp"/>
-        
+            android:textSize="20sp" />
+
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_tickets"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/yellow"
+        android:textColor="@color/black_background"
+        android:paddingHorizontal="25dp"
+        android:text="Buy my ticket!" />
+
+    <TextView
+        android:id="@+id/seats_left"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:textAlignment="center"
+        android:textColor="@color/grisclaro"
+        android:textStyle="italic" />
 
 </LinearLayout>
