--- a/app/src/main/res/layout/pelicula.xml
+++ b/app/src/main/res/layout/pelicula.xml
@@ -22,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="BONES"
+            android:textColor="@color/yellow"
             android:textSize="15sp"
             android:gravity="center" />
 
